// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Network utilities can enumerate services on TCP ports with "nmap -sV" 1`] = `
Array [
  Object {
    "port": 22,
    "protocol": "TCP",
    "service": "ssh",
    "version": "OpenSSH 7.8 (protocol 2.0)",
  },
]
`;

exports[`Network utilities can enumerate services on TCP ports with "nmap -sV" 2`] = `
Array [
  Array [
    "nmap",
    Array [
      "127.0.0.1",
      "-p",
      22,
      "-sV",
    ],
  ],
]
`;

exports[`Network utilities can enumerate services on UDP ports with "nmap -sV -sU" 1`] = `
Array [
  Object {
    "port": 22,
    "protocol": "UDP",
    "service": "ssh",
    "version": "OpenSSH 7.8 (protocol 2.0)",
  },
]
`;

exports[`Network utilities can enumerate services on UDP ports with "nmap -sV -sU" 2`] = `
Array [
  Array [
    "nmap",
    Array [
      "127.0.0.1",
      "-p",
      22,
      "-sV",
      "-sU",
    ],
  ],
]
`;

exports[`Network utilities can execute masscan scan and parse results 1`] = `
Array [
  "135",
  "139",
  "445",
  "1025",
  "3389",
]
`;

exports[`Network utilities can execute masscan scan and parse results 2`] = `
Array [
  Array [
    "ip",
    Array [
      "route",
    ],
  ],
  Array [
    "masscan",
    Array [
      "127.0.0.1",
      "-e",
      "tap0",
      "--router-ip",
      undefined,
      "-p",
      "0-65535",
      "--rate",
      500,
    ],
  ],
]
`;

exports[`Network utilities can execute nmap UDP scan and parse results 1`] = `
Array [
  Array [
    "nmap",
    Array [
      "127.0.0.1",
      "--open",
      "-sU",
      "-T4",
      "--max-retries",
      1,
    ],
  ],
]
`;

exports[`Network utilities can execute nmap scan and parse results 1`] = `
Array [
  "22",
  "445",
  "631",
  "3031",
  "3283",
  "5900",
]
`;

exports[`Network utilities can execute nmap scan and parse results 2`] = `
Array [
  Array [
    "nmap",
    Array [
      "127.0.0.1",
      "--open",
      "-p",
      "0-65535",
    ],
  ],
]
`;

exports[`Network utilities can sort IP addresses 1`] = `
Array [
  "1.198.3.93",
  "32.183.93.40",
  "104.30.244.2",
  "104.244.4.1",
  "104.244.253.29",
  "123.4.245.23",
]
`;
